Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,10 @@
 trigger:
 - master
 
-pool: Default
+pool:
+  name: Default
+  demands:
+   - agent.name -equals DESKTOP-49N1EJB
 
 steps:
 - task: Maven@3
